objects/WorkRequest_Device__c.object
<CustomObject>
    <fields>
        <fullName>Device_Name__c</fullName>
        <label>Device Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Device_Spec__c</fullName>
        <label>Device Spec</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Models_Name__c</fullName>
        <label>Models Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Updated_Technology_Scope__c</fullName>
        <label>Updated Technology Scope</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Work_Request__c</fullName>
        <label>Work Request</label>
        <referenceTo>Bug__c</referenceTo>
        <relationshipName>WorkRequest_Devices</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Device(s)</label>
    <nameField>
        <displayFormat>D-{00000}</displayFormat>
        <label>Device No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Devices(s)</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>